@@ -3122,47 +3122,4 @@ function getCVSVersion($file) {
 	}
 	return "";
 }
-
-// No translation yet, as we don't want may not release this in 1.4.1
-function checkVersions() {
-	global $GALLERY_BASEDIR, $gallery;
-	include $GALLERY_BASEDIR."setup/manifest.inc";
-	$errors=array();
-	foreach ($versions as $file => $version) {
-		$found_version=getCVSVersion($file);
-		if ($found_version === NULL) {
-		       	if (isDebugging()) {
-			       	print sprintf("Cannot read file %s.", $file);
-			       	print "<br>\n";
-			}
-			$errors[$file]="File missing or unreadable.";
-			continue;
-		} else if ($found_version === "") {
-		       	if (isDebugging()) {
-			       	print sprintf("Version information not found in %s.  File must be old version or corrupted.", $file);
-			       	print "<br>\n";
-		       	}
-		       	$errors[$file]="Missing version";
-		       	continue;
-	       	} else if ($found_version < $version) {
-		       	if (isDebugging()) {
-			       	print sprintf("Problem with %s.  Expected version %s (or greater) but found %s.", $file, $version, $found_version);
-			       	print "<br>\n";
-		       	}
-		       	$errors[$file]=sprintf("Expected version %s (or greater) but found %s.", $version, $found_version);
-	       	} else if ($found_version > $version) {
-		       	if (isDebugging()) {
-				print sprintf("%s OK.  Actual version (%s) more recent than expected version (%s)", $file, $found_version, $version);
-			       	print "<br>\n";
-			}
-		} else {
-		       	if (isDebugging()) {
-			       	print sprintf("%s OK", $file);
-			       	print "<br>\n";
-		       	}
-		}
-			
-	}
-	return $errors;
-}
 ?>
