@@ -1,3 +1,8 @@
+2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b212
+
+	* FIxed setup/check_version.php so it actually works with partially 
+	  upgraded 1.4 Galleries.
+
 2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b211
 
 	* Update manifest, and stop error messages if build_manifest.php
